fix: prevent forbidden error on API for users without API Products permission